# Python-Advanced

./: .coverage  .gitignore  Practice.txt  README.md  abcTraceback.py.  common.py  currencies.txt  email-john@example.com-1754830624.237021.txt  file.txt  intToWords.py  log.txt  pyproject.toml  requirements.txt  test.js  Разное (корневые файлы).md
.makemd/: fileCache.mdc  superstate.mdc
.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
1.Вводное занятие/: Multithreaded User Fetching with Logging and Timer.py  Multithreading vs Sequential Requests User Data Fetching Demo.py  Threading and Multiprocessing.md  parallel_tasks_with_threads.py
10_testing/1_unitest/: Unittest основы.md  test_runner.py
10_testing/2_coverage/: .coverage  Coverage.md
10_testing/3_pytest/: .coverage  .coveragerc  pytest.ini  pytest.md
10_testing/4_fixture/: .coverage  scopeInFixture.py  test_fixture.py  (+1 more)
3.Сложные простые типы/: MAIN.PY  Stroki_i_bayty.py.py  practice_1.py  practice_2.py  practice_3.py  practice_4.py  practice_5.py  practice_6.py  Строки, байты и Decimal.md
4.Functional programming in Python and its drawbacks/: Comparison of helpers map, filter with comprehensions. Lambda functions.py  practice.py
4.functional-programming-python/: 2.py  pyproject.toml  Функциональное программирование.md
5.Generators_and_Iterators/: 1.generators_iterators.py  2.create_generators.ipynb  2.create_generators.py  3.create_itaration.py  4.coroutines.py  common.py  pyproject.toml  Генераторы и итераторы.md
5.Generators_and_Iterators/practice_tasks/: 4.coroutines_tasks.py  merion practice copy.py  merion practice.py  practice_createG.py  practice_itaration.py
6.asynchronous/: requirements.txt
8.LinksAndMemory/: Garbage Collection.md  GarbageCollector.py  Python Memory Management Reference Counting, Cyclic GC, and Weak References.md  practice1.ipynb  stongAndWeakLinks.ipynb
OOP/: lab2_flashCard.py  practice1.py  practice2.py  ООП основы.md
SQL/: SQL и SQLAlchemy.md  lecture_1.sql
logging/: 2.py  common.py  utils.py  Логирование.md
multithreading и multiprocessing/: Multiprocessing Pool for Parallel CPU Tasks with Logging and Timing.py  await.py  main.py  parallel_tasks_with_threadpool.py
pet PROJECT/: Math trainer.md  main.py
ready_for_exem_1/: practice_1.py  practice_2.py  practice_3.py  Подготовка к экзамену.md
test data structure/: homework2.py  practice1.py  Алгоритмы и структуры данных.md
(+190 files in other folders)
