[project]
name = "functional-programming-python"
version = "0.1.0"
description = ""
authors = [
    {name = "eldossu06",email = "limbococo104@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp (>=3.14.1,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.poetry]
packages = [
    { include = "mypackage" }
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
