[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.10.5"
aiofiles = "^24.1.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.11.2"
type-aiofiles = "^24.1.0.20240626"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
type-aiofiles = "^24.1.0.20240626"

[tool.mypy]
python_version = '3.12'
strict = true
warn_unreachanble = true
warn_return_any = true
warn_unused_configs = true


